--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <script src="index.ts"></script>
+
+    <div style="display: flex;">
+      <div style="display: flex; width: 300px; height: 100px; justify-content: space-between; flex-direction: column;">
+        <input id="login" placeholder="Login" onchange="preencherLogin(event)">
+        <input id="senha" placeholder="Senha" type="password" onchange="preencherSenha(event)">
+        <input id="api-key" placeholder="Api Key" onchange="preencherApi()">
+        <button id="login-button" disabled>Login</button>
+      </div>
+      <div id="search-container" style="margin-left: 20px">
+        <input id="search" placeholder="Escreva...">
+        <button id="search-button">Pesquisar Filme</button>
+      </div>
+    </div>
+
+    <script src="/src/desafios/desafio4.ts"></script>
   </body>
 </html>
