Feita resolução do desafio 4

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
     <div style="display: flex;">
       <div style="display: flex; width: 300px; height: 100px; justify-content: space-between; flex-direction: column;">
-        <input id="login" placeholder="Login" onchange="preencherLogin(event)">
-        <input id="senha" placeholder="Senha" type="password" onchange="preencherSenha(event)">
-        <input id="api-key" placeholder="Api Key" onchange="preencherApi()">
+        <input id="login" placeholder="Login">
+        <input id="senha" placeholder="Senha" type="password">
+        <input id="api-key" placeholder="Api Key">
         <button id="login-button" disabled>Login</button>
       </div>
       <div id="search-container" style="margin-left: 20px">
@@ -20,6 +20,6 @@
       </div>
     </div>
 
-    <script src="/src/desafios/desafio4.ts"></script>
+    <script src="/src/desafios/desafio4.ts" defer></script>
   </body>
 </html>
